--- a/works.html
+++ b/works.html
@@ -41,16 +41,16 @@
 
             <nav class="navigation header__nav">
                 <ul class="nav__list">
-                    <li class="nav__item"><a href="../CodeYard/index.html#about" class="nav__link"><span class="nav__item_underline"></span>About</a></li>
-                    <li class="nav__item"><a href="../CodeYard/services.html" class="nav__link"><span class="nav__item_underline"></span>Service</a></li>
-                    <li class="nav__item"><a href="../CodeYard/works.html" class="nav__link"><span class="nav__item_underline"></span>Works</a></li>
-                    <li class="nav__item"><a href="../CodeYard/clients.html" class="nav__link"><span class="nav__item_underline"></span>Clients</a></li>
-                    <li class="nav__item"><a href="../CodeYard/contact.html" class="nav__link"><span class="nav__item_underline"></span>Contacts</a></li>
+                    <li class="nav__item"><a href="../index.html#about" class="nav__link"><span class="nav__item_underline"></span>About</a></li>
+                    <li class="nav__item"><a href="../services.html" class="nav__link"><span class="nav__item_underline"></span>Service</a></li>
+                    <li class="nav__item"><a href="../works.html" class="nav__link"><span class="nav__item_underline"></span>Works</a></li>
+                    <li class="nav__item"><a href="#clients" class="nav__link"><span class="nav__item_underline"></span>Clients</a></li>
+                    <li class="nav__item"><a href="../contact.html" class="nav__link"><span class="nav__item_underline"></span>Contacts</a></li>
                 </ul>
             </nav>
         </div>
     </header>
-    
+
     <!--	Slider set
 *****************************-->
     <!-- slider container -->
@@ -87,12 +87,12 @@
                 <!-- header and buttons of the gallery -->
                 <div class="works__header">
                     <h2 class="col-xs-12 col-sm-3">Works</h2>
-                    <nav class="works__header__nav col-xs-12 col-sm-9">
+                    <!--<nav class="works__header__nav col-xs-12 col-sm-9">
                         <button data-filter="*" class="works__nav__item works__nav__item_active"><span class="works__button_underline"></span>All</button>
                         <button data-filter=".design" class="works__nav__item"><span class="works__button_underline"></span>Design</button>
                         <button data-filter=".identy" class="works__nav__item"><span class="works__button_underline"></span>Identy</button>
                         <button data-filter=".web" class="works__nav__item"><span class="works__button_underline"></span>Web</button>
-                    </nav>
+                    </nav>-->
                 </div>
             </div>
 
@@ -103,10 +103,10 @@
                     <!-- gallery item -->
                     <div class="gallery__item gallery__item_1 col-xs-12 col-sm-6 web">
                         <div class="gallery__item__hover">
-                            <span class="item__hover__line"></span><span class="item__hover__tag">Web design</span>
+                            <span class="item__hover__line"></span><span class="item__hover__tag">Media Production</span>
 
-                            <h3 class="item__hover__header"><a href="javascript:void">Unsplash notepad</a></h3>
-                            <h4 class="item__hover__header-small">Comfortable writting and reading</h4>
+                            <h3 class="item__hover__header"><a href="javascript:void">clorova.</a></h3>
+                            <h4 class="item__hover__header-small">A World-class Media Production.</h4>
 
                             <a href="images/works/1.jpg" rel="nofollow" class="item__hover__zoom" title="Coffee Web Site">
                                 <img src="images/works/1.jpg" alt>
@@ -118,10 +118,10 @@
                     <!-- gallery item -->
                     <div class="gallery__item gallery__item_2 col-xs-12 col-sm-6 design">
                         <div class="gallery__item__hover">
-                            <span class="item__hover__line"></span><span class="item__hover__tag">Design</span>
+                            <span class="item__hover__line"></span><span class="item__hover__tag">Garment/Clothing Manufacturer</span>
 
-                            <h3 class="item__hover__header"><a href="javascript:void">Red Strip bottle</a></h3>
-                            <h4 class="item__hover__header-small">How to make bottle design</h4>
+                            <h3 class="item__hover__header"><a href="javascript:void">JY BH</a></h3>
+                            <h4 class="item__hover__header-small">French Garment Manufacturer</h4>
 
                             <a href="images/works/2.jpg" rel="nofollow" class="item__hover__zoom" title="Purple Web Page">
                                 <img src="images/works/2.jpg" alt>
@@ -134,10 +134,10 @@
                     <!-- gallery item -->
                     <div class="gallery__item gallery__item_3 col-xs-12 col-sm-6 identy">
                         <div class="gallery__item__hover">
-                            <span class="item__hover__line"></span><span class="item__hover__tag">Identy</span>
+                            <span class="item__hover__line"></span><span class="item__hover__tag">Cosmetics</span>
 
-                            <h3 class="item__hover__header"><a href="javascript:void">Cookie and Coffee</a></h3>
-                            <h4 class="item__hover__header-small">Take a break</h4>
+                            <h3 class="item__hover__header"><a href="javascript:void">Skinfinity Cosmetics</a></h3>
+                            <h4 class="item__hover__header-small">Every Skin Has an Ego.</h4>
 
                             <a href="images/works/3.jpg" rel="nofollow" class="item__hover__zoom" title="Coffee Web Site">
                                 <img src="images/works/3.jpg" alt>
@@ -150,10 +150,10 @@
                     <!-- gallery item -->
                     <div class="gallery__item gallery__item_4 col-xs-12 col-sm-6 web">
                         <div class="gallery__item__hover">
-                            <span class="item__hover__line"></span><span class="item__hover__tag">Web design</span>
+                            <span class="item__hover__line"></span><span class="item__hover__tag">Audio equipment Manufacturer</span>
 
-                            <h3 class="item__hover__header"><a href="javascript:void">Sheets of paper</a></h3>
-                            <h4 class="item__hover__header-small">Getting correct information</h4>
+                            <h3 class="item__hover__header"><a href="javascript:void">Libratone</a></h3>
+                            <h4 class="item__hover__header-small">Portable Music since 2009</h4>
 
                             <a href="iimages/works/4.jpg" rel="nofollow" class="item__hover__zoom" title="Coffee Web Site">
                                 <img src="images/works/4.jpg" alt>
