--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,6 @@
     <link rel="shortcut icon" href="images/icons/favicon.ico">
     <!-- bootstrap -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <!-- services stylesheet-->
     <link rel="stylesheet" href="css/services.css">
@@ -19,8 +18,6 @@
     <link rel="stylesheet" href="css/styles.css">
     <!-- animate.css -->
     <link rel="stylesheet" href="css/animate.min.css">
-    <!-- icons set -->
-    <link rel="stylesheet" href="css/fontello.css">
 
 </head>
 
@@ -37,11 +34,11 @@
 
             <nav class="navigation header__nav">
                 <ul class="nav__list">
-                    <li class="nav__item"><a href="../CodeYard/index.html#about" class="nav__link"><span class="nav__item_underline"></span>About</a></li>
-                    <li class="nav__item"><a href="../CodeYard/services.html" class="nav__link"><span class="nav__item_underline"></span>Service</a></li>
-                    <li class="nav__item"><a href="../CodeYard/works.html" class="nav__link"><span class="nav__item_underline"></span>Works</a></li>
-                    <li class="nav__item"><a href="../CodeYard/clients.html" class="nav__link"><span class="nav__item_underline"></span>Clients</a></li>
-                    <li class="nav__item"><a href="../CodeYard/contact.html" class="nav__link"><span class="nav__item_underline"></span>Contacts</a></li>
+                    <li class="nav__item"><a href="../index.html#about" class="nav__link"><span class="nav__item_underline"></span>About</a></li>
+                    <li class="nav__item"><a href="../services.html" class="nav__link"><span class="nav__item_underline"></span>Service</a></li>
+                    <li class="nav__item"><a href="../works.html" class="nav__link"><span class="nav__item_underline"></span>Works</a></li>
+                    <li class="nav__item"><a href="#clients" class="nav__link"><span class="nav__item_underline"></span>Clients</a></li>
+                    <li class="nav__item"><a href="../contact.html" class="nav__link"><span class="nav__item_underline"></span>Contacts</a></li>
                 </ul>
             </nav>
         </div>
