--- a/services.html
+++ b/services.html
@@ -6,19 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Floper</title>
     <!-- favicon -->
-    <link rel="shortcut icon" href="../CodeYard/images/icons/favicon.ico">
+    <link rel="shortcut icon" href="images/icons/favicon.ico">
     <!-- bootstrap -->
-    <link rel="stylesheet" href="../CodeYard/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <!-- services stylesheet-->
+    <link rel="stylesheet" href="css/services.css">
     <!-- footer stylesheet-->
-    <link rel="stylesheet" href="../CodeYard/css/footer.css">
+    <link rel="stylesheet" href="css/footer.css">
     <!-- custom main stylesheet -->
-    <link rel="stylesheet" href="../CodeYard/css/styles.css">
-        <!-- services stylesheet-->
-    <link rel="stylesheet" href="../CodeYard/css/services.css">
+    <link rel="stylesheet" href="css/styles.css">
     <!-- animate.css -->
-    <link rel="stylesheet" href="../CodeYard/css/animate.min.css">
-        <!-- icons set -->
-    <link rel="stylesheet" href="../CodeYard/css/fontello.css">
+    <link rel="stylesheet" href="css/animate.min.css">
 
 </head>
 
@@ -35,27 +34,24 @@
 
             <nav class="navigation header__nav">
                 <ul class="nav__list">
-                    <li class="nav__item"><a href="../CodeYard/index.html#about" class="nav__link"><span class="nav__item_underline"></span>About</a></li>
-                    <li class="nav__item"><a href="../CodeYard/services.html" class="nav__link"><span class="nav__item_underline"></span>Service</a></li>
-                    <li class="nav__item"><a href="../CodeYard/works.html" class="nav__link"><span class="nav__item_underline"></span>Works</a></li>
-                    <li class="nav__item"><a href="../CodeYard/clients.html" class="nav__link"><span class="nav__item_underline"></span>Clients</a></li>
-                    <li class="nav__item"><a href="../CodeYard/contact.html" class="nav__link"><span class="nav__item_underline"></span>Contacts</a></li>
+                    <li class="nav__item"><a href="../index.html#about" class="nav__link"><span class="nav__item_underline"></span>About</a></li>
+                    <li class="nav__item"><a href="../services.html" class="nav__link"><span class="nav__item_underline"></span>Service</a></li>
+                    <li class="nav__item"><a href="../works.html" class="nav__link"><span class="nav__item_underline"></span>Works</a></li>
+                    <li class="nav__item"><a href="#clients" class="nav__link"><span class="nav__item_underline"></span>Clients</a></li>
+                    <li class="nav__item"><a href="../contact.html" class="nav__link"><span class="nav__item_underline"></span>Contacts</a></li>
                 </ul>
             </nav>
         </div>
     </header>
-<div class="service-slider__parallax parallax"></div>
+
     <!-- Slider -->
     <section class="services__slider">
-        
+        <div class="service-slider__parallax parallax"></div>
         <div class="sevices__tagline">
             <h1>Get the space<br>you need and<br>so much more</h1>
         </div>
-        <div class = "services-slider__text">
-            Check CODE<b>YARDS</b> individual plans<br>to maximize your efficiency and<br>make your time here a little less dull.
-        </div>
         <div class="slider__button">
-            <a class="btn" href="#services__pricing">Choose your plan</a>
+            <a class="btn" href="#services__pricing">explore</a>
         </div>
     </section>
 
