--- a/works.html
+++ b/works.html
@@ -86,7 +86,7 @@
             <div class="row">
                 <!-- header and buttons of the gallery -->
                 <div class="works__header">
-                    <h2 class="col-xs-12 col-sm-3">Works</h2>
+                    <h2 class="col-xs-12 col-sm-3">Showcase</h2>
                     <!--<nav class="works__header__nav col-xs-12 col-sm-9">
                         <button data-filter="*" class="works__nav__item works__nav__item_active"><span class="works__button_underline"></span>All</button>
                         <button data-filter=".design" class="works__nav__item"><span class="works__button_underline"></span>Design</button>
@@ -166,10 +166,10 @@
                     <!-- gallery item -->
                     <div class="gallery__item gallery__item_5 col-xs-12 col-sm-6 design">
                         <div class="gallery__item__hover">
-                            <span class="item__hover__line"></span><span class="item__hover__tag">Design</span>
+                            <span class="item__hover__line"></span><span class="item__hover__tag">Mobile Developer</span>
 
-                            <h3 class="item__hover__header"><a href="javascript:void">Magazines</a></h3>
-                            <h4 class="item__hover__header-small">Nice reading</h4>
+                            <h3 class="item__hover__header"><a href="javascript:void">Touring Bird</a></h3>
+                            <h4 class="item__hover__header-small">Travel : It's all about the experience</h4>
 
                             <a href="images/works/5.jpg" rel="nofollow" class="item__hover__zoom" title="Coffee Web Site">
                                 <img src="images/works/5.jpg" alt>
@@ -182,10 +182,10 @@
                     <!-- gallery item -->
                     <div class="gallery__item gallery__item_6 col-xs-12 col-sm-6 identy">
                         <div class="gallery__item__hover">
-                            <span class="item__hover__line"></span><span class="item__hover__tag">Identy</span>
+                            <span class="item__hover__line"></span><span class="item__hover__tag">Data Center Startup</span>
 
-                            <h3 class="item__hover__header"><a href="javascript:void">Design of stores</a></h3>
-                            <h4 class="item__hover__header-small">Design your store</h4>
+                            <h3 class="item__hover__header"><a href="javascript:void">Jelvix</a></h3>
+                            <h4 class="item__hover__header-small">All-round solutions for your IT tasks</h4>
 
                             <a href="images/works/6.jpg" rel="nofollow" class="item__hover__zoom" title="Coffee Web Site">
                                 <img src="images/works/6.jpg" alt>
